--- a/src/main/resources/assets/atarikafa_heykelleri/lang/en_us.json
+++ b/src/main/resources/assets/atarikafa_heykelleri/lang/en_us.json
@@ -1,1 +1,10 @@
-{}
+{
+  "block.atarikafa_heykelleri.amuda_kalkan_atarikafa": "Amuda Kalkan Atarikafa",
+  "block.atarikafa_heykelleri.ellerini_kaldiran_atarikafa": "Ellerini Kaldiran Atarikafa",
+  "block.atarikafa_heykelleri.oturan_atarikafa": "Oturan Atarikafa",
+  "block.atarikafa_heykelleri.thor_kafa": "Thor Kafa",
+  "block.atarikafa_heykelleri.bloga_tirmanan_atarikafa": "Bloga Tirmanan Atarikafa",
+  "block.atarikafa_heykelleri.el_sallayan_atarikafa": "El Sallayan Atarikafa",
+  "block.atarikafa_heykelleri.ozgur_kafa": "Ozgur Kafa",
+  "block.atarikafa_heykelleri.ucan_atarikafa": "Ucan Atarikafa"
+}
