--- a/src/main/resources/assets/atarikafa_heykelleri/lang/en_us.json
+++ b/src/main/resources/assets/atarikafa_heykelleri/lang/en_us.json
@@ -6,5 +6,6 @@
   "block.atarikafa_heykelleri.bloga_tirmanan_atarikafa": "Bloga Tirmanan Atarikafa",
   "block.atarikafa_heykelleri.el_sallayan_atarikafa": "El Sallayan Atarikafa",
   "block.atarikafa_heykelleri.ozgur_kafa": "Ozgur Kafa",
-  "block.atarikafa_heykelleri.ucan_atarikafa": "Ucan Atarikafa"
+  "block.atarikafa_heykelleri.ucan_atarikafa": "Ucan Atarikafa",
+  "itemGroup.tabatarikafa_heykelleri": "Atarikafa Heykelleri"
 }
