--- a/src/main/resources/assets/atarikafa_heykelleri/lang/en_us.json
+++ b/src/main/resources/assets/atarikafa_heykelleri/lang/en_us.json
@@ -4,7 +4,7 @@
   "block.atarikafa_heykelleri.oturan_atarikafa": "Oturan Atarikafa",
   "block.atarikafa_heykelleri.thor_kafa": "Thor Kafa",
   "item.atarikafa_heykelleri.compressed_clay": "Compressed Clay",
-  "block.atarikafa_heykelleri.bloga_tirmanan_atarikafa": "Bloga Tirmanan Atarikafa",
+  "block.atarikafa_heykelleri.bloga_tirmanan_atarikafa": "Bloğa Tırmanan Atarikafa",
   "block.atarikafa_heykelleri.el_sallayan_atarikafa": "El Sallayan Atarikafa",
   "block.atarikafa_heykelleri.ozgur_kafa": "Ozgur Kafa",
   "block.atarikafa_heykelleri.ucan_atarikafa": "Ucan Atarikafa",
